# Python-Project-Skeleton

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  ruff.toml
